feat: update api to v1.2
