# backend/internal/infrastructure/db/postgres/repositories/container_status_repository.go
@@ -33,7 +33,7 @@ func (r *ContainerStatusRepositoryImpl) Find(
 	r.logger.Debugf("REPOSITORIES: executing Find with filter: %+v", *filter)
 
 	query := `
-		SELECT id, ip_address, name, status, ping_time, last_successful_ping, created_at, updated_at
+		SELECT container_id, ip_address, name, status, ping_time, last_successful_ping, created_at, updated_at
 		FROM container_status
 	`
 
@@ -47,9 +47,9 @@ func (r *ContainerStatusRepositoryImpl) Find(
 		argCounter++
 	}
 
-	if filter.ID != nil {
-		conditions = append(conditions, fmt.Sprintf("id = $%d", argCounter))
-		args = append(args, filter.ID)
+	if filter.ContainerID != nil {
+		conditions = append(conditions, fmt.Sprintf("container_id = $%d", argCounter))
+		args = append(args, *filter.ContainerID)
 		argCounter++
 	}
 
@@ -124,7 +124,7 @@ func (r *ContainerStatusRepositoryImpl) Find(
 		var pingTime float64
 
 		err := rows.Scan(
-			&status.ID,
+			&status.ContainerID,
 			&status.IPAddress,
 			&status.Name,
 			&status.Status,
@@ -151,13 +151,13 @@ func (r *ContainerStatusRepositoryImpl) Create(status *domain.ContainerStatus) e
 	r.logger.Debugf("REPOSITORIES: creating container status record: %+v", status)
 
 	query := `
-		INSERT INTO container_status (ip_address, name, status, ping_time, last_successful_ping, created_at, updated_at)
-		VALUES ($1, $2, $3, $4, $5, $6, $7)
-		RETURNING id
+		INSERT INTO container_status (container_id, ip_address, name, status, ping_time, last_successful_ping, created_at, updated_at)
+		VALUES ($1, $2, $3, $4, $5, $6, $7, $8)
+		RETURNING container_id
 	`
 
-	err := r.db.QueryRowx(
-		query,
+	err := r.db.QueryRowx(query,
+		status.ContainerID,
 		status.IPAddress,
 		status.Name,
 		status.Status,
@@ -165,38 +165,39 @@ func (r *ContainerStatusRepositoryImpl) Create(status *domain.ContainerStatus) e
 		status.LastSuccessfulPing,
 		status.CreatedAt,
 		status.UpdatedAt,
-	).Scan(&status.ID)
+	).Scan(&status.ContainerID)
 	if err != nil {
 		r.logger.Errorf("REPOSITORIES: failed to create container status: %v", err)
 		return fmt.Errorf("failed to create container status: %w", err)
 	}
 
-	r.logger.Debugf("REPOSITORIES: container status created with ID: %d", status.ID)
+	r.logger.Debugf("REPOSITORIES: container status created with ID: %d", status.ContainerID)
 
 	return nil
 }
 
 func (r *ContainerStatusRepositoryImpl) Update(status *domain.ContainerStatus) error {
-	r.logger.Debugf("REPOSITORIES: updating container status record for IP: %s", status.IPAddress)
+	r.logger.Debugf("REPOSITORIES: updating container status record for ID: %s, IP: %s", status.ContainerID, status.IPAddress)
 
 	query := `
 		UPDATE container_status
-		SET name = $1, status = $2, ping_time = $3, last_successful_ping = $4, updated_at = $5
-		WHERE ip_address = $6
+		SET name = $1, status = $2, ping_time = $3, last_successful_ping = $4, updated_at = $5, ip_address = $6
+		WHERE container_id = $7
 	`
 
-	_, err := r.db.Exec(
-		query,
+	_, err := r.db.Exec(query,
 		status.Name,
 		status.Status,
 		status.PingTime,
 		status.LastSuccessfulPing,
 		status.UpdatedAt,
 		status.IPAddress,
+		status.ContainerID,
 	)
 	if err != nil {
 		r.logger.Errorf(
-			"REPOSITORIES: failed to update container status for IP %s: %v",
+			"REPOSITORIES: failed to update container status for ID %s, IP %s: %v",
+			status.ContainerID,
 			status.IPAddress,
 			err,
 		)
@@ -204,32 +205,33 @@ func (r *ContainerStatusRepositoryImpl) Update(status *domain.ContainerStatus) e
 	}
 
 	r.logger.Debugf(
-		"REPOSITORIES: container status for IP %s updated successfully",
+		"REPOSITORIES: container status for ID %s, IP %s updated successfully",
+		status.ContainerID,
 		status.IPAddress,
 	)
 
 	return nil
 }
 
-func (r *ContainerStatusRepositoryImpl) DeleteByIP(ipAddress string) error {
-	r.logger.Debugf("REPOSITORIES: deleting container status record for IP: %s", ipAddress)
+func (r *ContainerStatusRepositoryImpl) DeleteByContainerID(containerID string) error {
+	r.logger.Debugf("REPOSITORIES: deleting container status record for container id: %s", containerID)
 
 	query := `
 		DELETE FROM container_status
-		WHERE ip_address = $1
+		WHERE container_id = $1
 	`
 
-	_, err := r.db.Exec(query, ipAddress)
+	_, err := r.db.Exec(query, containerID)
 	if err != nil {
 		r.logger.Errorf(
-			"REPOSITORIES: failed to delete container status for IP %s: %v",
-			ipAddress,
+			"REPOSITORIES: failed to delete container status for container id %s: %v",
+			containerID,
 			err,
 		)
 		return fmt.Errorf("failed to delete container status: %w", err)
 	}
 
-	r.logger.Debugf("REPOSITORIES: container status for IP %s deleted successfully", ipAddress)
+	r.logger.Debugf("REPOSITORIES: container status for container id %s deleted successfully", containerID)
 
 	return nil
 }
